2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use DHTMessage::T instead of "t".
	* src/DHTMessageTracker.cc (messageArrived)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made keyName static const. Made trimmed charset static const
	std::string.
	* src/Util.cc (getContentDispositionFilename)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made USER_AGENT const. Made "/" static const std::string.
	* src/A2STR.cc
	* src/A2STR.h
	* src/HttpRequest.cc
	* src/HttpRequest.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string listeral to static const std::string:
	"Content-Range", "Content-Length"
	* src/HttpHeader.cc
	* src/HttpHeader.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string listeral to static const std::string.
	* src/HttpConnection.cc
	* src/HttpHeader.cc
	* src/HttpHeader.h
	* src/HttpResponse.cc

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string listeral to static const std::string.
	* src/A2STR.cc
	* src/A2STR.h
	* src/SimpleLogger.cc
	* src/SimpleLogger.h

2008-05-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string literal to static const std::string.
	Rewritten CookieParser::setField.
	* src/A2STR.cc
	* src/A2STR.h
	* src/CookieBoxFactory.cc
	* src/CookieBoxFactory.h
	* src/CookieParser.cc
	* src/CookieParser.h

2008-05-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string literal to static const std::string
	* src/DHTAbstractMessage.cc
	* src/DHTAnnouncePeerMessage.cc
	* src/DHTAnnouncePeerMessage.h
	* src/DHTAnnouncePeerReplyMessage.cc
	* src/DHTAnnouncePeerReplyMessage.h
	* src/DHTFindNodeMessage.cc
	* src/DHTFindNodeMessage.h
	* src/DHTFindNodeReplyMessage.cc
	* src/DHTFindNodeReplyMessage.h
	* src/DHTGetPeersMessage.cc
	* src/DHTGetPeersMessage.h
	* src/DHTGetPeersReplyMessage.cc
	* src/DHTGetPeersReplyMessage.h
	* src/DHTMessage.cc
	* src/DHTMessage.h